# PrePaste

./: README.md  pyproject.toml  requirements.txt
src/: clipboard_observer.py  config_store.py  file.py  microsoft_presidio.py  notif.py  prepaste_win_notification.py  presidio_redact.py  redaction_viewer.py  settings.py
